🚀  [Deploy] - AWS 접속 시, 발생하는 오류를 해결한다 (#18)
* ✨ [Feature] - Choco API를 구현한다 (#8)

* Refactor: 디렉토리 이름 수정

* Feat: Choco API 생성 완료

* Chore: Redis credential 수정 (#11)

* Chore: CI/CD 진행 시에만 바스티온 호스트의 ingress 22번 포트를 뚫을 수 있도록 한다 (#14)

* Chore: Github actions IP 오류를 해결한다 (#17)

---------

Co-authored-by: 민장규 <133879283+Jang99u@users.noreply.github.com>

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -56,6 +56,10 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: 'ap-northeast-2'
 
+      - name: Set Github Actions IP
+        run: |
+          TEMP_IP=$(curl -s http://checkip.amazonaws.com)
+          echo "TEMP_IP=$TEMP_IP" >> $GITHUB_ENV
 
       - name: Add GitHub Actions IP
         run: |
@@ -63,8 +67,7 @@ jobs:
             --group-id ${{ secrets.SECURITY_GROUP_ID }} \
             --protocol tcp \
             --port 22 \
-            --cidr ${{ steps.ip.outputs.ipv4 }}/32
-
+            --cidr ${{ TEMP_IP }}/32
 
       - name: Connect Bastion Host And Run deploy.sh
         uses: appleboy/ssh-action@v1.0.0
@@ -82,4 +85,4 @@ jobs:
             --group-id ${{ secrets.SECURITY_GROUP_ID }} \
             --protocol tcp \
             --port 22 \
-            --cidr ${{ steps.ip.outputs.ipv4 }}/32
+            --cidr ${{ TEMP_IP }}/32
