Chore: Redis에서 Session을 사용한다

--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ dependencies {
 
 	// redis
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+	implementation 'org.springframework.session:spring-session-data-redis'
 
 	// spring security
 	implementation 'org.springframework.boot:spring-boot-starter-security'
